# invoker

./: .gitattributes  CMakeLists.txt  Cargo.toml  README.md  WARP.md  asyncProcess.cpp  asyncProcess.hpp  client.cpp  conanfile.py  deepseek-chat-2025-06-18T09-26-17-265Z.html  main.cpp  main.ts  package.json  podman.cpp  podman.hpp  podmanClient.ts  session.cpp  session.hpp  session.ts  socket.cpp  socket.ts  tar.ts  task.cpp  task.hpp  task.ts  test.cpp  test.js  vcpkg.json  websocketClient.cpp  websocketClient.hpp  websocketClient.ts
lib/: asyncProcess.cpp  asyncProcess.hpp  operatorApi.cpp  operatorApi.hpp  operatorApiServer.cpp  podmanClient.cpp  podmanClient.hpp  tar.cpp  tar.hpp
lib/lib/: socket.cpp  socket.hpp
libs/archive/: Cargo.toml
libs/archive/src/: lib.rs
libs/channel/: Cargo.toml
libs/resource_pool/: Cargo.toml
old/: client.cpp  main.cpp  socket.cpp  socket.hpp  socketBase.cpp  socketBase.hpp
save/: operatorApi.cpp  operatorApi.hpp  test.js
save/test/: Dockerfile  main.js
src/: api.rs  application.rs  archive.rs  channel.rs  config_loader.rs  judge.rs  log_utils.rs  logger.rs  main.rs  prelude.rs  pull.rs  resource_pool.rs  sandbox.rs  ws.rs
src/communication/: mod.rs  websocket.rs
src/judge/: api.rs  double_run.rs  interactive.rs  mod.rs  standard.rs  test_runner.rs
src/sandbox/: command.rs  mod.rs
src/sandboxes/: isolate.rs
src/server/: mod.rs  websocket.rs
templates/: problem.tar
templates/problem_template/: checker.out  config.yaml  problem.tar
templates/problems/: build.sh
templates/problems/archives/: guess.tar  python-sum.tar  sum.tar
templates/problems/archives/sum (2)/: solution
templates/problems/guess/: interactor.cpp  interactor.out  solution  solution.cpp
templates/problems/python-sum/: checker.cpp  checker.out  config.yaml  solution
templates/problems/sum/: checker.cpp  checker.out  config.yaml
templates/tasks/archives/: guess.tar
templates/tasks/archives/sum/: checker.out
templates/tasks/guess/: config.yaml  interactor.cpp
templates/tasks/python-sum/: config.yaml  solution
templates/tasks/sum/: solution
test/: Dockerfile  main.js
testOperator/: Dockerfile  operator  test.js
