[workspace]
members = [ "libs/archive", "libs/channel","libs/resource_pool"]
resolver = "3"

[package]
name = "invoker"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "*" }

reqwest = { version = "*", features = ["json"] }

log = { version = "*" }
env_logger = { version = "*" }
colored = {version = "*"}

tokio = { version = "*", features = ["full"] }
tokio-tar = {version = "*"}

ratchet_rs = { version = "*", features = ["deflate", "split"] }
bytes = { version = "*" }

futures = { version = "*" }

http = { version = "*" }
anyhow = { version = "*" }

serde = { version = "*", features = ["derive"] }
serde_yml = { version = "*" }

uuid = { version = "*", features = ["v4"] }
envy = { version = "*" }

resource_pool = {path = "libs/resource_pool"}
archive = {path = "libs/archive"}
channel = {path = "libs/channel"}

[features]
mock = []
