[workspace]
resolver = "3"

[package]
name = "invoker"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "*" }

reqwest = { version = "*", features = ["json"] }

log = { version = "*" }
env_logger = { version = "*" }
colored = {version = "*"}

tokio = { version = "*", features = ["full"] }

ratchet_rs = { version = "*", features = ["deflate", "split"] }
bytes = { version = "*" }

futures = { version = "*" }

http = { version = "*" }
anyhow = { version = "*" }

serde = { version = "*", features = ["derive"] }
serde_yml = { version = "*" }

uuid = { version = "*", features = ["v4"] }
envy = { version = "*" }

tar_archive_rs = {git = "https://github.com/summer-54/tar_archive_rs.git"}

resource_pool = {git = "https://github.com/summer-54/resource_pool.git"}
configo = {git = "https://github.com/summer-54/configo.git"}

[features]
mock = []
