[workspace]
resolver = "3"

[package]
name = "invoker"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "*"

log = "*"
env_logger = "*"
colored = "*"

tokio = "*"

ratchet_rs = { version = "*", features = ["deflate", "split"] }
bytes = "*"

futures = "*"

http = "*"
anyhow = "*"

serde = { version = "*", features = ["derive"] }
serde_yml = "*"

uuid = { version = "*", features = ["v4"] }
envy = "*"

tar_archive_rs = {git = "https://github.com/summer-54/tar_archive_rs.git"}

resource_pool = {git = "https://github.com/summer-54/resource_pool.git"}
configo = {git = "https://github.com/summer-54/configo.git"}

invoker_auth = {git = "https://github.com/summer-54/invoker_auth.git"}

nix = {version = "*", features = ["user"]}

async-trait = {version = "*"}

[features]
mock = []
